// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyPair.ts should create a new KeyPair from JWK 1`] = `
{
  "algorithms": [
    "ES512",
  ],
  "created": 2020-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "391a4598-5dc6-4e3c-b1d9-a971ac55b3bb",
  "isExternal": true,
  "namedCurve": "P-521",
  "notBefore": 2020-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "privateKey",
  "publicKey": "publicKey",
  "revision": 0,
  "type": "EC",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPair.ts should get json 1`] = `
{
  "algorithms": [
    "ES512",
    "ES384",
    "ES256",
  ],
  "created": 2019-01-01T08:00:00.000Z,
  "expiresAt": 2020-01-01T08:00:00.000Z,
  "id": "259ff47d-e334-4784-a478-04bf6d6b5d84",
  "isExternal": false,
  "namedCurve": "P-521",
  "notBefore": 2019-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": "https://origin.uri",
  "ownerId": "e4edc190-6dbc-47eb-b144-2e9624f91f4a",
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "privateKey",
  "publicKey": "publicKey",
  "revision": 0,
  "type": "EC",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPair.ts should have all data 1`] = `
{
  "algorithms": [
    "ES512",
    "ES384",
    "ES256",
  ],
  "created": 2019-01-01T08:00:00.000Z,
  "expiresAt": 2020-01-01T08:00:00.000Z,
  "id": "259ff47d-e334-4784-a478-04bf6d6b5d84",
  "isExternal": false,
  "namedCurve": "P-521",
  "notBefore": 2019-01-01T08:00:00.000Z,
  "operations": [
    "sign",
    "verify",
  ],
  "originUri": "https://origin.uri",
  "ownerId": "e4edc190-6dbc-47eb-b144-2e9624f91f4a",
  "passphrase": null,
  "preferredAlgorithm": "ES512",
  "privateKey": "privateKey",
  "publicKey": "publicKey",
  "revision": 0,
  "type": "EC",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPair.ts should have optional data 1`] = `
{
  "algorithms": [
    "RS256",
    "RS384",
  ],
  "created": 2020-01-01T08:00:00.000Z,
  "expiresAt": null,
  "id": "02dc19eb-2b8b-4a83-a0c0-9ac2b306bb9a",
  "isExternal": false,
  "namedCurve": null,
  "notBefore": 2020-01-01T08:00:00.000Z,
  "operations": [
    "decrypt",
    "verify",
  ],
  "originUri": null,
  "ownerId": null,
  "passphrase": null,
  "preferredAlgorithm": "RS384",
  "privateKey": null,
  "publicKey": "publicKey",
  "revision": 0,
  "type": "RSA",
  "updated": 2020-01-01T08:00:00.000Z,
  "version": 0,
}
`;

exports[`KeyPair.ts toJWK should convert private RSA key with passphrase to JWK 1`] = `
{
  "alg": "RS512",
  "created_at": 1578099600,
  "crv": "crv",
  "d": "d",
  "dp": "dp",
  "dq": "dq",
  "e": "e",
  "key_ops": [
    "decrypt",
    "encrypt",
    "sign",
    "verify",
  ],
  "kid": "privateKeyRSAWithPasscode",
  "kty": "RSA",
  "n": "n",
  "not_before": 1578099600,
  "p": "p",
  "q": "q",
  "qi": "qi",
  "use": "sig",
  "x": "x",
  "y": "y",
}
`;

exports[`KeyPair.ts toJWK should convert private key to JWK 1`] = `
{
  "alg": "ES512",
  "created_at": 1577926800,
  "crv": "crv",
  "d": "d",
  "dp": "dp",
  "dq": "dq",
  "e": "e",
  "key_ops": [
    "sign",
    "verify",
  ],
  "kid": "privateKey",
  "kty": "EC",
  "n": "n",
  "not_before": 1577926800,
  "p": "p",
  "q": "q",
  "qi": "qi",
  "use": "sig",
  "x": "x",
  "y": "y",
}
`;
